# Cairo

./: .Rbuildignore  DESCRIPTION  NEWS  README.md  configure  configure.ac  configure.win  mkdist  version
.github/workflows/: check.yml
R/: Cairo.R  zzz.R
man/: Cairo.Rd  Cairo.capabilities.Rd  Cairo.capture.Rd  Cairo.onSave.Rd  Cairo.serial.Rd  CairoFontMatch.Rd  CairoFonts.Rd
src/: Makevars.in  Makevars.ucrt  Makevars.win  Rapi.h  backend.h  cairobem.c  cairobem.h  cairogd.c  cairogd.h  cairotalk.c  cairotalk.h  cconfig.h.in  img-backend.c  img-backend.h  img-jpeg.c  img-jpeg.h  img-tiff.c  img-tiff.h  pdf-backend.c  pdf-backend.h  ps-backend.c  ps-backend.h  svg-backend.c  svg-backend.h  w32-backend.c  w32-backend.h  xlib-backend.c  xlib-backend.h
